# global-stationaryOT

./: .gitignore  LICENCE  README.md  pyproject.toml
examples/: example-hematopoiesis.ipynb
extra/data/hemo_data/gene_lists/: driver_gene_AP_results_n=250.csv  driver_gene_AP_results_n=500.csv
extra/data/hemo_data/prefitted_adatas/gene_lists/: driver_gene_AP_results_n=250.csv  driver_gene_AP_results_n=500.csv
extra/data/sim_data/: bistable_simulation_results.csv
extra/data_preprocessing/hematopoiesis/: hemo_preprocessing.ipynb
extra/data_preprocessing/hematopoiesis/metadata/: GSE189161_cells.txt  GSE189161_features.txt  GSE189161_metadata.csv  ages.csv  meta_cluster.csv  sink_types.csv  sinks.csv
extra/data_preprocessing/sim/: bistable_sim.py  sde_simulator.py
extra/figures/: figure_2.ipynb  figure_3.ipynb  figure_4.ipynb  figure_5.ipynb  requirements.txt
extra/figures/hemo_validation_results/: postnatal_valid.py  postnatal_validation_res.csv  prenatal_valid.py  prenatal_validation_res.csv
sim/: bistable_sim.py
src/gstatot/: StatOT.py  __init__.py  data_utils.py  driver_genes.py  gStatOT.py  metrics.py  solver.py  utils.py
